# stock_data_collect

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: DESIGN.md  DESIGN_DETAIL.md
src/: main.py
src/config/: settings.py
src/models/: stock_data.py
src/services/: bigquery_client.py  jquants_client.py  secret_manager.py
src/tests/: test_date_utils.py  test_models.py
src/utils/: date_utils.py  logger.py  retry.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/dev/: backend.tf  main.tf  variables.tf
terraform/environments/prod/: backend.tf  outputs.tf  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/scheduler/: main.tf  outputs.tf  variables.tf
terraform/scripts/: deploy.sh  init.sh  update-container.sh
